vault/vault-StatefulSet.yaml
# kubectl -n vault-ns exec -it vault-0 -- /bin/sh
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vault
  namespace: vault-ns
  labels:
    app: vault
    layer: application
spec:
  serviceName: vault-internal
  podManagementPolicy: "Parallel"
  replicas: 4
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      serviceAccountName: vault-service-account
      securityContext:
        runAsNonRoot: true
        runAsGroup: 1000
        runAsUser: 100
        fsGroup: 1000
      containers:
        - name: vault
          image: l_vault:latest
          imagePullPolicy: Never
          command:
          - "/bin/sh"
          - "-ec"
          args:
          - |
            cp /vault/config/extraconfig-from-values.hcl /tmp/storageconfig.hcl;
            [ -n "${HOST_IP}" ] && sed -Ei "s|HOST_IP|${HOST_IP?}|g" /tmp/storageconfig.hcl;
            [ -n "${POD_IP}" ] && sed -Ei "s|POD_IP|${POD_IP?}|g" /tmp/storageconfig.hcl;
            [ -n "${HOSTNAME}" ] && sed -Ei "s|HOSTNAME|${HOSTNAME?}|g" /tmp/storageconfig.hcl;
            [ -n "${API_ADDR}" ] && sed -Ei "s|API_ADDR|${API_ADDR?}|g" /tmp/storageconfig.hcl;
            [ -n "${TRANSIT_ADDR}" ] && sed -Ei "s|TRANSIT_ADDR|${TRANSIT_ADDR?}|g" /tmp/storageconfig.hcl;
            [ -n "${RAFT_ADDR}" ] && sed -Ei "s|RAFT_ADDR|${RAFT_ADDR?}|g" /tmp/storageconfig.hcl;
            /usr/local/bin/docker-entrypoint.sh vault server -config=/tmp/storageconfig.hcl

          securityContext:

            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - all
              add: ['IPC_LOCK']

          ports:

            - name: http
              containerPort: 8200
            - name: https
              containerPort: 8300
            - name: https-internal
              containerPort: 8201
            - name: http-rep
              containerPort: 8202

          resources:

            limits:
              cpu: 500m
              memory: 3Gi
            requests:
              cpu: 10m
              memory: 512Mi

          readinessProbe:

            tcpSocket:
              port: 8200
            failureThreshold: 2
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5

          livenessProbe:

            tcpSocket:
              port: 8200
            failureThreshold: 6
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 5

          volumeMounts:

            - name: pvc-vaults-data
              mountPath: /vault/data
            - name: pvc-vaults-home
              mountPath: /home/vault
            - name: vault-config-volume
              mountPath: /vault/config
            - name: vault-pem
              mountPath: /cert/domain.pem
              subPath: SSL_CERT_BUNDLE
            - name: vault-privkey
              mountPath: /cert/domain.key
              subPath: SSL_KEY
      volumes:

        - name: vault-config-volume
          configMap:
            name: vault-configmap
            items:
            - key: extraconfig-from-values.hcl
              path: extraconfig-from-values.hcl

        - name: vault-pem
          secret:
            secretName: vault-secret-tls

        - name: vault-privkey
          secret:
            secretName: vault-secret-tls

  volumeClaimTemplates:

  - metadata:
      name: pvc-vaults-data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: longhorn-retain
      resources:
        requests:
          storage: 250Mi

  - metadata:
      name: pvc-vaults-home
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: longhorn-retain
      resources:
        requests:
          storage: 250Mi
