vault/vault-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-nginx-service
  namespace: vault-ns
  labels:
    app: vault-nginx
    layer: reverseproxy
spec:
  selector:
    app: vault-nginx
  ports:
    - name: vault-nginx-https
      protocol: TCP
      port: 443
      targetPort: 443
