vault/vault-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-service
  namespace: vault-ns
  labels:
    app: vault
    layer: application
spec:
  type: ClusterIP
  ports:
    - name: https-internal
      port: 8201
      targetPort: 8201
      protocol: TCP
    - name: https
      port: 8300
      targetPort: 8300
      protocol: TCP
  selector:
    app: vault
  publishNotReadyAddresses: false
#  selector:
#    app: vault
#    # vault-active is one of the dynamic labels managed by vault’s “Kubernetes service registration” only for HA mode
#    vault-active: "true"
